Bug 491025 - Author data not shown
Summary: Author data not shown
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: James Graham
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-30 13:04 UTC by Tobias Fella
Modified: 2024-09-19 15:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bubble missing author data (8.50 KB, image/png)
2024-07-30 13:04 UTC, Tobias Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tobias Fella 2024-07-30 13:04:35 UTC
Created attachment 172124 [details]
bubble missing author data

speculative explanation: This seems to happen for rooms we've just joined; Due to lazy-loading, we might not have the room member state events available to get the required info
Comment 1 Bug Janitor Service 2024-09-19 13:59:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1896
Comment 2 Tobias Fella 2024-09-19 15:43:08 UTC
Git commit 4c49ca2a519b5c82f6f6f6eacbcb408a15380101 by Tobias Fella, on behalf of James Graham.
Committed on 19/09/2024 at 15:43.
Pushed by tfella into branch 'master'.

NeochatRoomMember ID fallback

Make sure that when the returned RoomMember in NeochatRoomMember is empty that displayname and similar functions return the member Matrix ID

M  +36   -6    src/neochatroommember.cpp

https://invent.kde.org/network/neochat/-/commit/4c49ca2a519b5c82f6f6f6eacbcb408a15380101