src/neochatroommember.cpp
@@ -72,7 +72,12 @@ QString NeochatRoomMember::displayName() const
         return id();
     }
 
-    return m_room->member(m_memberId).displayName();
+    const auto memberObject = m_room->member(m_memberId);
+#if Quotient_VERSION_MINOR > 8
+    return memberObject.isEmpty() ? id() : memberObject.displayName();
+#else
+    return memberObject.id().isEmpty() ? id() : memberObject.displayName();
+#endif
 }
 
 QString NeochatRoomMember::htmlSafeDisplayName() const
@@ -81,7 +86,12 @@ QString NeochatRoomMember::htmlSafeDisplayName() const
         return id();
     }
 
-    return m_room->member(m_memberId).htmlSafeDisplayName();
+    const auto memberObject = m_room->member(m_memberId);
+#if Quotient_VERSION_MINOR > 8
+    return memberObject.isEmpty() ? id() : memberObject.htmlSafeDisplayName();
+#else
+    return memberObject.id().isEmpty() ? id() : memberObject.htmlSafeDisplayName();
+#endif
 }
 
 QString NeochatRoomMember::fullName() const
@@ -90,7 +100,12 @@ QString NeochatRoomMember::fullName() const
         return id();
     }
 
-    return m_room->member(m_memberId).fullName();
+    const auto memberObject = m_room->member(m_memberId);
+#if Quotient_VERSION_MINOR > 8
+    return memberObject.isEmpty() ? id() : memberObject.fullName();
+#else
+    return memberObject.id().isEmpty() ? id() : memberObject.fullName();
+#endif
 }
 
 QString NeochatRoomMember::htmlSafeFullName() const
@@ -99,7 +114,12 @@ QString NeochatRoomMember::htmlSafeFullName() const
         return id();
     }
 
-    return m_room->member(m_memberId).htmlSafeFullName();
+    const auto memberObject = m_room->member(m_memberId);
+#if Quotient_VERSION_MINOR > 8
+    return memberObject.isEmpty() ? id() : memberObject.htmlSafeFullName();
+#else
+    return memberObject.id().isEmpty() ? id() : memberObject.htmlSafeFullName();
+#endif
 }
 
 QString NeochatRoomMember::disambiguatedName() const
@@ -108,7 +128,12 @@ QString NeochatRoomMember::disambiguatedName() const
         return id();
     }
 
-    return m_room->member(m_memberId).disambiguatedName();
+    const auto memberObject = m_room->member(m_memberId);
+#if Quotient_VERSION_MINOR > 8
+    return memberObject.isEmpty() ? id() : memberObject.disambiguatedName();
+#else
+    return memberObject.id().isEmpty() ? id() : memberObject.disambiguatedName();
+#endif
 }
 
 QString NeochatRoomMember::htmlSafeDisambiguatedName() const
@@ -117,7 +142,12 @@ QString NeochatRoomMember::htmlSafeDisambiguatedName() const
         return id();
     }
 
-    return m_room->member(m_memberId).htmlSafeDisambiguatedName();
+    const auto memberObject = m_room->member(m_memberId);
+#if Quotient_VERSION_MINOR > 8
+    return memberObject.isEmpty() ? id() : memberObject.htmlSafeDisambiguatedName();
+#else
+    return memberObject.id().isEmpty() ? id() : memberObject.htmlSafeDisambiguatedName();
+#endif
 }
 
 int NeochatRoomMember::hue() const
